--- a/src/pages/quotes/quotes.html
+++ b/src/pages/quotes/quotes.html
@@ -10,6 +10,14 @@
 <ion-content padding>
   <ion-card *ngFor="let quote of quoteGroup.quotes; let i = index">
     <ion-card-header>#{{ i + 1 }}</ion-card-header>
-    <ion-card-content>{{ quote.text }}</ion-card-content>
+    <ion-card-content>
+      <p>{{ quote.text }}</p>
+      <p class="author">{{ quote.person }}</p>
+    </ion-card-content>
+    <ion-row>
+      <ion-col text-right>
+        <button ion-button clear small (click)="onAddToFavorite(quote)">Favorite</button>
+      </ion-col>
+    </ion-row>
   </ion-card>
 </ion-content>
