--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the FavoritesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +8,12 @@
 
 
 <ion-content padding>
+
+  <ion-list>
+    <ion-item *ngFor="let quote of quotes">
+      <h2>{{ quote.person }}</h2>
+      <p>{{ quote.text }}</p>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
