--- a/src/pages/quote/quote.html
+++ b/src/pages/quote/quote.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title></ion-title>
+    <ion-title>{{ person }}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -9,9 +9,7 @@
 
 <ion-content padding text-center>
   <ion-card >
-    <ion-card-content>
-      TEXT
-    </ion-card-content>
+    <ion-card-content>{{ text }}</ion-card-content>
     <ion-row>
       <ion-col>
         <button ion-button small outline color="danger">Unfavorite</button>
