--- a/src/pages/quote/quote.html
+++ b/src/pages/quote/quote.html
@@ -12,7 +12,7 @@
     <ion-card-content>{{ text }}</ion-card-content>
     <ion-row>
       <ion-col>
-        <button ion-button small outline color="danger">Unfavorite</button>
+        <button ion-button small outline color="danger" (click)="onClose(true)">Unfavorite</button>
       </ion-col>
     </ion-row>
   </ion-card>
