--- a/src/pages/quotes/quotes.html
+++ b/src/pages/quotes/quotes.html
@@ -16,7 +16,8 @@
     </ion-card-content>
     <ion-row>
       <ion-col text-right>
-        <button ion-button clear small (click)="onAddToFavorite(quote)">Favorite</button>
+        <button ion-button clear small (click)="onAddToFavorites(quote)" *ngIf="!isFavorite(quote)">Favorite</button>
+        <button ion-button clear small color="danger" (click)="onRemoveFromFavorites(quote)" *ngIf="isFavorite(quote)">Unfavorite</button>
       </ion-col>
     </ion-row>
   </ion-card>
