67. Changing the overall App theme

--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -11,7 +11,7 @@
 
   <ion-list>
     <ion-item-sliding *ngFor="let quote of quotes">
-      <ion-item (click)="onViewQuote(quote)">
+      <ion-item color="quoteBackground" (click)="onViewQuote(quote)">
         <h2>{{ quote.person }}</h2>
         <p>{{ quote.text }}</p>
       </ion-item>
