--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -1,7 +1,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>favorites</ion-title>
+    <ion-buttons start>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>Favorite Quotes</ion-title>
   </ion-navbar>
 
 </ion-header>
