--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -13,5 +13,14 @@
 
 
 <ion-content padding>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-label>Alternative Background</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-toggle (ionChange)="onToggle($event)"></ion-toggle>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
