73. Adding an Alternative Item Background

--- a/src/pages/favorites/favorites.html
+++ b/src/pages/favorites/favorites.html
@@ -16,7 +16,7 @@
 
   <ion-list>
     <ion-item-sliding *ngFor="let quote of quotes">
-      <ion-item color="quoteBackground" (click)="onViewQuote(quote)">
+      <ion-item color="quoteBackground" [ngClass]="{alt: isAltBackground()}" (click)="onViewQuote(quote)">
         <h2>{{ quote.person }}</h2>
         <p>{{ quote.text }}</p>
       </ion-item>
